css/main.css
#top
 {
    position:absolute;
    left:0;
    right: 0;
    width: 60%;
    height: 100%;
}
#bottom{
    position:absolute;
    left:0;
    right: 0;
    width: 40%;
    margin-left: 60%;
    height: 100%;
}

.states {
    fill: #DFDFDF;
    stroke: #fff;
    stroke-width: 1px;
}

.cities {
    fill: steelblue;
    fill-opacity: 0.5;
    stroke: #fff;
    stroke-width: 2px;
}
.highlighted_cities {
    fill: red;
    fill-opacity:1;
    stroke: #fff;
    stroke-width: 2px;
}

.hidden {
    display: none;
}

.tooltip {
    width: 400px;
    font-size: 200%;
    color: #222;
    background-color: #fff;
    padding: .5em;
    text-shadow: #f5f5f5 0 1px 0;
    border-radius: 2px;
    opacity: 0.9;
    position: absolute;
    word-wrap: break-word;
}

